compiler/src/test/resources/golden/errors/ct_fuel_loop.err
error: comptime: fuel exhausted — evaluation did not finish within the step budget
  --> ct_fuel_loop.dawn:4:5
  |
4 |     i = i + 1
  |     ^^^^^^^^^
  = hint: raise it with --comptime-fuel, or simplify the computation
